# UNDERSEA

./: .gitignore  .travis.yml  README.md  azure-pipelines.yml  build-mission.sh  killAll.sh  launch.sh  matlab.sh  moos-linux.sh  moos-linux.sh.bak  moos-osx.sh  ortools.sh  output_Prism.txt  runner.sh  setup.sh
UNDERSEA_Controller/resources/: config.properties
UNDERSEA_DSL/: .gitignore  build:build:config.properties  buildconfig.properties  pom.xml
UNDERSEA_DSL/grammar/: CompileGrammar.bat  CompileGrammar.sh  Sensors.g4  Sensors_Terminals.g4  UUV.g4  UUV_Terminals.g4  UUV_Terminals.tokens
UNDERSEA_DSL/missions/: .LastOpenedMOOSLogDirectory  meta_alpha.bhv  meta_bravo.bhv  meta_charlie.bhv  meta_shoreside.moos  meta_vehicle_alpha.moos  meta_vehicle_bravo.moos  (+14 more)
buildOutputCleanup/: cache.properties
coverageplanner/: pom.xml
docs/: conf.py  index.rst  logging.rst  tutorial1.rst
mission-includes/: behaviour.bhv  plug_origin_info.moos  plug_pHostInfo.moos  plug_pMarineViewer.moos  plug_pShare.moos  plug_uFldNodeBroker.moos  plug_uProcessWatch.moos
missions/: mission-multiple.config
moos-ivp-undersea/: .gitignore  CMakeLists.txt
moos-ivp-undersea/src/sTest/: CMakeLists.txt  Change.cpp  Change.h  Sensor.cpp  Sensor.h  Sensor_Info.cpp  Sensor_Info.h  main.cpp
old-scripts/: build-mission.sh
resources/: mission.config  runner.properties
undersea/: .gitignore  build.gradle  ortools.sh  pom.xml  settings.gradle
undersea-agent/: .gitignore  README.md  build.gradle  log-test-0.txt  log-test-1.txt  log-test-2.txt  log-test-3.txt  log-test-4.txt  settings.gradle
(+1090 files in other folders)
